[gd_scene load_steps=12 format=3 uid="uid://dkrdjtyb1p88n"]

[ext_resource type="Script" path="res://scenes/screens/levels/units/DefaultUnit.gd" id="1_vdjhd"]
[ext_resource type="Texture2D" uid="uid://ixa58p2rs7m1" path="res://img/knight.png" id="2_bl1id"]
[ext_resource type="PackedScene" uid="uid://c82skjj0rnb0j" path="res://animations/error_animation.tscn" id="3_4eh3g"]
[ext_resource type="Script" path="res://scenes/screens/levels/units/CollisionArea.gd" id="4_gcuuy"]
[ext_resource type="Texture2D" uid="uid://blji7c3clubrn" path="res://img/HealthIcon.png" id="4_ixxuq"]
[ext_resource type="PackedScene" uid="uid://ckpuh02hucwvd" path="res://components/HealthComponent.tscn" id="4_oq3j3"]
[ext_resource type="Texture2D" uid="uid://k1ksfcdaid3c" path="res://img/anime/slash/frame-3.png" id="5_8052n"]
[ext_resource type="Texture2D" uid="uid://cv143uo2lmdgk" path="res://img/move.png" id="5_wmhhx"]
[ext_resource type="PackedScene" uid="uid://bsghedd31qfoa" path="res://components/movement_comp/movement_comp.tscn" id="6_0pp86"]
[ext_resource type="AudioStream" uid="uid://12xa7dj1stmj" path="res://music/ui_sounds/263133__pan14__tone-beep.wav" id="12_3cmra"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3ojo"]
size = Vector2(50, 50)

[node name="basic_unit" type="Node2D" groups=["living_units"]]
z_index = 9
script = ExtResource("1_vdjhd")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
offset_right = 50.0
offset_bottom = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(25, 24.5)
scale = Vector2(1.04167, 1.02083)
texture = ExtResource("2_bl1id")

[node name="ErrorAnimation" parent="." instance=ExtResource("3_4eh3g")]
visible = false
z_index = 100
z_as_relative = false

[node name="UnitStatsBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="UnitStatsBar"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_left = -4.0
offset_right = 54.0
offset_bottom = 62.0
color = Color(0.258824, 0.215686, 0.0980392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UnitStatsBar/ColorRect"]
layout_mode = 0
offset_right = 52.0
offset_bottom = 74.0

[node name="HBoxContainer" type="HBoxContainer" parent="UnitStatsBar/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="UnitStatsBar/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_ixxuq")
expand_mode = 1

[node name="Health" type="Label" parent="UnitStatsBar/ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Hp"

[node name="HBoxContainer2" type="HBoxContainer" parent="UnitStatsBar/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UnitStatsBar/ColorRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("5_wmhhx")
expand_mode = 1

[node name="Movement" type="Label" parent="UnitStatsBar/ColorRect/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Move:"

[node name="HBoxContainer3" type="HBoxContainer" parent="UnitStatsBar/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UnitStatsBar/ColorRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("5_8052n")
expand_mode = 1

[node name="Actions" type="Label" parent="UnitStatsBar/ColorRect/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Act:"

[node name="HealthComponent" parent="." instance=ExtResource("4_oq3j3")]
position = Vector2(-5, -22)

[node name="movement_comp" parent="." instance=ExtResource("6_0pp86")]
z_index = 3

[node name="ActionComponent" type="Node2D" parent="."]
light_mask = 2
position = Vector2(25, 25)

[node name="OutlinePolygon" type="Polygon2D" parent="."]
z_index = 10
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(0, 50, 50, 50, 50, 0, 0, 0)

[node name="RemainMovementLabel" type="Label" parent="."]
z_index = 20
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_top = -10.0
offset_bottom = 30.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Remain 
Movement:"

[node name="Center" type="Marker2D" parent="."]
position = Vector2(25, 26)

[node name="CollisionArea" type="Area2D" parent="."]
visibility_layer = 61
collision_mask = 27
script = ExtResource("4_gcuuy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
visibility_layer = 25
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_n3ojo")
debug_color = Color(0.835294, 0.301961, 0.623529, 0.419608)

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_3cmra")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="animation_finished" from="ErrorAnimation" to="." method="_on_error_animation_finished"]
[connection signal="hp_changed" from="HealthComponent" to="." method="_on_health_component_hp_changed"]
[connection signal="ran_out_of_movement" from="movement_comp" to="." method="_on_movement_comp_ran_out_of_movement"]
[connection signal="remain_movement_changed" from="movement_comp" to="." method="___on_movement_changed"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_collision_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_collision_area_area_exited"]
